fix error in jade code for project building

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "homepage": "https://github.com/shurochkin/decor-svadba#readme",
   "devDependencies": {
     "ds-gulp-builder": "^0.2.2",
-    "ds-gulp-builder-browser-sync": "^0.2.0",
-    "ds-gulp-builder-browserify": "^0.2.0",
-    "ds-gulp-builder-jade": "^0.2.0",
-    "ds-gulp-builder-sass": "^0.2.1",
+    "ds-gulp-builder-browser-sync": "^0.2.2",
+    "ds-gulp-builder-browserify": "^0.2.5",
+    "ds-gulp-builder-pug": "^0.2.2",
+    "ds-gulp-builder-sass": "^0.2.3",
     "gulp": "^3.9.1",
     "gulp-include": "^2.3.1",
     "gulp-jade": "^1.1.0",
